# Todo-rs

./: .gitignore  Cargo.toml  README.md  package-lock.json
.github/workflows/: build.yml  rust.yml
assets/: main.css
react-frontend/: package-lock.json  package.json
react-frontend/src/: App.css  App.tsx
react-frontend/src/services/: api.ts
rust-backend/: Cargo.toml
rust-backend/src/: lib.rs  main.rs
src/: lib.rs  main.rs
